[package]
name = "Search-Songs"
version = "0.1.0"
authors = ["soheyHashimoto <heyso1209@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
scraper = "0.12.0"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"